--- a/Youtube/css/style.css
+++ b/Youtube/css/style.css
@@ -11,6 +11,9 @@ sidebar div:hover{
     background-color: #e5e5e5;
    
 }
+.googleIcons a:hover{
+    background-color:#d4cdcd;
+}
 sidebar div>i:hover{
     color: red;
 }
